--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: devlopr
-subtitle: A Portfolio Jekyll Theme Built for Developers
+title: Jason Khadka
+subtitle: Physicist | AI Research Scientist
 description: >- # this means to ignore newlines until "baseurl:"
   devlopr-jekyll is a beautiful Jekyll Theme Built For Developers, which is optimized for speed and readability.
 
@@ -8,53 +8,75 @@ baseurl: "" # the subpath of your site, e.g. /blog
 
 # Navigation
 urls:
-    - text: Home
-      url: /
-    - text: About
-      url: /about
-    - text: Blog
-      url: /blog
-    - text: Gallery
-      url: /gallery
-    - text: Shop
-      url : /shop
-    - text: Contact
-      url : /contact
+    - text: Résumé
+      url: /resume
+    - text: Github
+      url: /github
+   #  - text: Blog
+   #    url: /blog
+   #  - text: Gallery
+   #    url: /gallery
+   #  - text: Shop
+   #    url : /shop
+   #  - text: Contact
+   #    url : /contact
 
 
 # Edit Author details (For multi authors check _data/authors.yml)
 
 author_logo: profile.png
-author: John Doe
-author_bio: Hi, my name is John Doe. I built this site using devlopr-jekyll :D
-author_email: "mail@sujaykundu.com"
-author_location: India
-author_website_url: "https://sujaykundu.com"
-typewrite-text: devlopr is a jekyll framework built for developers. You can edit this in _config.yml file
+author: Dr. Jason Khadka
+author_bio: PhD in Computation Physics working on problems in Artificial Intelligence.
+author_email: "jasonkhadka33@gmail.com"
+author_location: Germany
+author_website_url: "https://jasonkhadka.github.io"
+typewrite-text: AI Research Scientist living in Berlin
 hero_cover_img: sample_cover.jpg # replace this for changing homepage cover (eg. try cover.jpeg). Image should be in /assets/img
 
 # Experiences
 author_work_experiences:
-            - company_name: Google
-              company_logo: google.png
-              company_url: https://google.com
-              designation: Software Engineer
-              description: Worked on various Google Products
+            - company_name: LF1
+              company_logo: lf1.png
+              company_url: https://www.lf1.io
+              designation: AI Research Scientist
+              description: Research and deveopment of AI models and software
               visibility: true
-            - company_name: Microsoft
-              company_logo: microsoft.png
-              company_url: https://microsoft.com
-              designation: Azure Developer
-              description: Worked on various Azure Cloud Products
+            - company_name: Factorypal
+              company_logo: factorypal.png
+              designation: Senior IIOT Data Analyst
+              description: Design & development of algorithms, analytics and reporting
+              visibility: true
+            - company_name: PwC
+              company_logo: pwc.png
+              designation: Senior Consultant
+              description: Worked on various Data analytic projects
+              visibility: true
+            - company_name: Max Planck Institute for Dynamics and Self-Organization (MPIDS)
+              company_logo: mpi.png
+              company_url: https://www.ds.mpg.de/
+              designation: Research Scientist
+              description: Developed 3D simulation for plant tissue growth
               visibility: true
 
 # Education
 author_education_details:
-              - college_logo: mit.png
-                college_name: MIT
-                college_url: https://mit.org
-                college_degree: CS Engineer
-                description: Bachelor of Technology
+              - college_logo: unigo.png
+                college_name: University of Göttingen
+                college_url: https://www.uni-goettingen.de/
+                college_degree: Dr. rer. nat.
+                description: Doctorate in Physics
+                visibility: true
+              - college_logo: uib.png
+                college_name: University of the Balearic Islands
+                college_url: https://www.uib.eu/
+                college_degree: Masters in Physics
+                description: Masters in Physics of Complex Systems
+                visibility: true
+              - college_logo: jub.png
+                college_name: Jacobs University Bremen
+                college_url: https://www.jacobs-university.de/
+                college_degree: B. Sc.
+                description: Bachelors of Science in Physics
                 visibility: true
 
 # Projects
@@ -63,28 +85,23 @@ author_project_details:
                 project_title: Gamers Hub
                 project_description: A Platform built for Gamers and Game Devs
                 project_url: https://gamershub.in
-                visibility: true
-              - project_thumbnail: hack4r.PNG
-                project_title: Hack4r
-                project_description: A Platform built for Hackers and Penetration Testers
-                project_url: https://hack4r.com
-                visibility: true
+                visibility: false
 
 # social links
-twitter_username: johndoe
-github_username:  sujaykundu777
-facebook_username: johndoe
-linkedin_username: johndoe
-behance_username: johndoe
-instagram_username: johndoe
-medium_username: johndoe
-telegram_username: johndoe
-dribbble_username: johndoe
-flickr_username: johndoe
+twitter_username: jasonkhdk
+github_username:  jasonkhadka
+facebook_username: 
+linkedin_username: khadka
+behance_username: 
+instagram_username: 
+medium_username: 
+telegram_username: 
+dribbble_username: 
+flickr_username: 
 
 #for comments ( we got Disqus and Hyvor Commenting, uncomment the one you want to use )
 
-# disqus_shortname: sujay-kundu
+# disqus_shortname: 
 hyvor_talk_website_id: 476
 
 # wakatime username (coding activity)
