--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ author_email: "jasonkhadka33@gmail.com"
 author_location: Germany
 author_website_url: "https://jasonkhadka.github.io"
 typewrite-text: AI Research Scientist living in Berlin
-hero_cover_img: sample_cover.jpg # replace this for changing homepage cover (eg. try cover.jpeg). Image should be in /assets/img
+hero_cover_img: cover_2.jpg # replace this for changing homepage cover (eg. try cover.jpeg). Image should be in /assets/img
 
 # Experiences
 author_work_experiences:
