--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ author_email: "jasonkhadka33@gmail.com"
 author_location: Germany
 author_website_url: "https://jasonkhadka.github.io"
 typewrite-text: AI Research Scientist living in Berlin
-hero_cover_img: cover.jpg # replace this for changing homepage cover (eg. try cover.jpeg). Image should be in /assets/img
+hero_cover_img: cover_2.jpg # replace this for changing homepage cover (eg. try cover.jpeg). Image should be in /assets/img
 
 # Experiences
 author_work_experiences:
@@ -47,7 +47,7 @@ author_work_experiences:
               description: Design & development of algorithms, analytics and reporting
               visibility: true
             - company_name: PwC
-              company_logo: pwc.png
+              company_logo: PwC-Logo.jpg
               designation: Senior Consultant
               description: Worked on various Data analytic projects
               visibility: true
